# University

./: .gitignore
Lab1/Lab1_code/Lab1_code/: BaseRemover.h  Lab1_code.vcxproj  NumsRemover.h  main.cpp
OOP/Lab1/Lab1_UI/: Lab1_UI.sln
OOP/Lab1/Lab1_UI/Lab1_UI/: Lab1_UI.vcxproj  MyForm.cpp  MyForm.h  MyForm.resx
OOP/Lab1/Lab1_code/: Lab1_code.sln
OOP/Lab1/Lab1_code/Lab1_code/: BaseRemover.cpp  BaseRemover.h  Lab1_code.vcxproj  Lab1_code.vcxproj.filters  NumsRemover.cpp  NumsRemover.h  WordRemover.cpp  WordRemover.h
OOP/Lab10/: .gitignore  CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  sticker.tmp
OOP/Lab11/: Lab11.py
OOP/Lab2/: Lab2.sln
OOP/Lab2/Lab2/: FileChat.cpp  FileChat.h  Lab2.vcxproj  main.cpp
OOP/Lab4/: Lab4.sln
OOP/Lab4/Lab4/: Lab4.vcxproj  main.cpp
OOP/Lab5/: Lab5.sln
OOP/Lab5/Lab5/: Lab5.vcxproj  Lab5.vcxproj.filters  Main.cpp  TelephoneBook.cpp  TelephoneBook.h
OOP/Lab6/: Lab6.sln  Lab6.vcxproj  Lab6.vcxproj.filters  main2.cpp
OOP/Lab7/: FractionHandler.cpp  FractionsHandler.h  Lab7.sln  Lab7.vcxproj  Lab7.vcxproj.filters  main.cpp
OOP/Lab8/: CMakeLists.txt  FileDataGeneration.cpp  QuaternaryTree.h  main.cpp  test.txt
OOP/Lab9/: CMakeLists.txt  main.cpp  task.cpp  task.h
Operations Research/Lab1/: Lab1.sln
Operations Research/Lab1/Lab1/: Lab1.vcxproj  main.cpp
